# QueryWeaver

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  app.py  data_generator.py  onthology.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  vercel.json
.github/: copilot-instructions.md  spellcheck-settings.yml  wordlist.txt
.github/workflows/: dependency-review.yml  e2e-tests.yml  publish-docker.yml  pylint.yml  spellcheck.yml  tests.yml
api/: agents.py  app_factory.py  config.py  constants.py  extensions.py  graph.py  index.py  index_original.py  schema_aba.json  utils.py
api/agents/: __init__.py  analysis_agent.py  base_agent.py  follow_up_agent.py  relevancy_agent.py  response_formatter_agent.py  taxonomy_agent.py  utils.py
api/auth/: __init__.py  oauth_handlers.py  organization_management.py  user_management.py
api/helpers/: crm_data_generator.py
api/loaders/: base_loader.py  csv_loader.py  graph_loader.py  json_loader.py  mysql_loader.py  odata_loader.py  postgres_loader.py  schema_validator.py
api/routes/: __init__.py  auth.py  database.py  graphs.py  main.py  organization.py
api/static/css/: base.css  buttons.css  chat.css  layout.css  menu.css  modals.css  responsive.css  variables.css
api/templates/: base.j2  chat.html  chat.j2  chat_new.j2
docs/: postgres_loader.md
examples/: blog.json  complete_crm_schema.json  crm.json  crm_qa.csv  crm_tables.json  crm_topology.json  ecommerce.json  erp.json  examples.txt  store.json
static/css/: chat.css
static/js/: chat.js
templates/: chat.html
tests/: conftest.py  test_postgres_loader.py  test_simple_integration.py
tests/e2e/: README.md  test_api_endpoints.py  test_basic_functionality.py  test_chat_functionality.py  test_file_upload.py
text2sql/: __init__.py  agents.py  config.py  crm_qa.ods  extensions.py  graph.py  routes.py  schema_schema.json  utils.py  wsgi.py
text2sql/helpers/: crm_data_generator.py
text2sql/loaders/: base_loadr.py  csv_loader.py  graph_loader.py  json_loader.py  odata_loader.py
(+32 files in other folders)
