[tool.poetry]
name = "text2sql"
version = "0.1.0"
description = ""
authors = ["Guy Korland <gkorland@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.61.13"
FalkorDB = "^1.0.10"
Flask = "^3.1.0"
jsonschema = "^4.23.0"
google-generativeai = "^0.8.4"
tqdm = "^4.67.1"
graphrag-sdk = {extras = ["all"], version = "^0.6.1"}
pandas = "^2.2.3"
google-genai = "<1.7.0"
sentence-transformers = "^4.0.2"
boto3 = "^1.37.29"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

