[project]
name = "text2sql"
version = "0.1.0"
description = "Convert text to SQL queries"
requires-python = ">=3.12,<3.13"

[tool.poetry]
name = "text2sql"
version = "0.3.0"
description = ""
authors = ["Guy Korland <gkorland@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
litellm = {extras = ["bedrock"], version = "^1.67.0.post1"}
FalkorDB = "^1.0.10"
Flask = "^3.1.0"
jsonschema = "^4.23.0"
tqdm = "^4.67.1"
boto3 = "^1.37.29"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

